# olcSoundWaveEngine

./: .gitignore  CMakeLists.txt  HeaderMaker.cpp  Makefile  README.md  TEST_SoundPGEX.cpp  TEST_Wave.cpp  olcSoundWaveEngine.h
demos/: SoundWaveTests.vcxproj  SoundWaveTests.vcxproj.filters  Test_001_BasicCompilation.cpp  Test_002_PGE_BasicSynth.cpp  Test_003_ClickToPlayWaves.cpp  Test_003_PGE_ClickToPlayWaves.cpp  Test_004_PGE_RawDataPlayback.cpp  olcPixelGameEngine.h
devPlayground/: Makefile  Test_MiniAudio.cpp
source/: SoundWaveTests.vcxproj  SoundWaveTests.vcxproj.filters  Test1_BasicCompilation.cpp  Test_002_PGE_BasicSynth.cpp  olcSoundWaveEngine.h  olcSoundWaveEngine.sln  olcSoundWaveEngine.vcxproj  olcSoundWaveEngine.vcxproj.filters  olc_swe_template.h  swe_dummy.h  swe_prefix.h  swe_synth_delay.cpp  swe_synth_delay.h  swe_synth_envelope.cpp  swe_synth_envelope.h  swe_synth_first_order_filter.cpp  swe_synth_first_order_filter.h  swe_synth_modular.cpp  swe_synth_modular.h  swe_synth_n_mixer.cpp  swe_synth_n_mixer.h  swe_synth_osc.cpp  swe_synth_osc.h  swe_synth_pinkifier.cpp  swe_synth_pinkifier.h  swe_system_alsa.cpp  swe_system_alsa.h  swe_system_base.cpp  swe_system_base.h  swe_system_miniaudio.cpp  swe_system_miniaudio.h  swe_system_openal.cpp  swe_system_openal.h  swe_system_pulse.cpp  swe_system_pulse.h  swe_system_sdlmixer.cpp  swe_system_sdlmixer.h  swe_system_wasapi.cpp  swe_system_wasapi.h  swe_system_winmm.cpp  (+10 more)
